fixed scrolling. IO now chunks when too big instead of who knows what. dom is now WIP

--- a/styles.css
+++ b/styles.css
@@ -245,6 +245,10 @@ body {
   grid-area: content;
 }
 
+#output_terminal pre {
+  padding-bottom: 2em;
+}
+
 #output_terminal input {
   font-family: inherit;
   color: grey;
